# esp-mqtt-IA

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/mqtt_client/: CMakeLists.txt  Kconfig  README.md  mqtt_client.cpp
components/mqtt_client/include/mqtt_client/: mqtt_client.hpp
components/wifi_sta/: CMakeLists.txt  wifi_sta.cpp
components/wifi_sta/include/wifi_sta/: wifi_sta.hpp
main/: CMakeLists.txt  app_main.cpp
